<resources>
    <string name="app_name">Warmindo Inspirasi Indonesia</string>
    <string name="app_name2">Halaman Shift</string>
    <string name="app_name3">Detail Transaksi</string>
    <string name="app_name4">Halaman Transaksi</string>
    <string name="app_name5">Halaman Editor</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Warmindo Inspirasi indonesia</string>
    <string name="nav_header_subtitle">warmindo_enak12@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="toolbar">Ananda Rizky Pratama</string>
    <string name="masuk">Masuk</string>
    <string name="action_profile">Profile</string>
    <string name="action_logout">Logout</string>
    <string name="title2">Shift 1
    11.00-17.00</string>
    <string name="title">Shift 1</string>
    <string name="time">11.00-17.00</string>
    <string name="tambah">+Tambah</string>
    <string-array name="list_status">
        <item>Baru</item>
        <item>Diproses</item>
        <item>Disajikan</item>
        <item>Selesai</item>
    </string-array>
    <string name="btn_simpan">Simpan</string>
</resources>