<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.android.warmindoinspirasiindonesia.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_nav_transaksi"
            app:destination="@id/nav_transaksi" />
    </fragment>

    <fragment
        android:id="@+id/nav_detail"
        android:name="com.android.warmindoinspirasiindonesia.ui.detail.DetailFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_detail" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.android.warmindoinspirasiindonesia.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_transaksi"
        android:name="com.android.warmindoinspirasiindonesia.ui.transaksi.TransaksiFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_transaksi" >
        <argument
            android:name="com.a"
            app:argType="string"
            android:defaultValue="0" />
        <action
            android:id="@+id/action_nav_transaksi_to_nav_detail"
            app:destination="@id/nav_detail" />
    </fragment>
</navigation>